Bug 253421 - Plasma crashed while moving a plasmoid [QObject::disconnect, ContainmentPrivate::containmentConstraintsEvent, Applet::flushPendingConstraintsEvents, Applet::timerEvent]
Summary: Plasma crashed while moving a plasmoid [QObject::disconnect, ContainmentPriva...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 253907 254241 261167 266799 267750 272714 291067 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-06 20:54 UTC by Jannis Liapis
Modified: 2012-01-09 16:59 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.41 KB, text/plain)
2010-12-28 18:43 UTC, David
Details
New crash information added by DrKonqi (4.76 KB, text/plain)
2011-05-26 19:57 UTC, EP
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jannis Liapis 2010-10-06 20:54:03 UTC
Application: plasma-desktop (0.3)
KDE Platform Version: 4.5.2 (KDE 4.5.2)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-22-generic i686
Distribution: Ubuntu maverick (development branch)

-- Information about the crash:
I was trying to move facebook notifier plasmoid and the desktop crashed.

-- Backtrace:
Application: Plasma Workspace (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb6140a30 (LWP 2051))]

Thread 4 (Thread 0xac5b9b70 (LWP 2102)):
#0  0x05f0baf0 in g_ptr_array_set_size () from /lib/libglib-2.0.so.0
#1  0x05f39da5 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#2  0x05f3a279 in ?? () from /lib/libglib-2.0.so.0
#3  0x05f3a848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0178459f in QEventDispatcherGlib::processEvents (this=0x9f803f8, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x01754609 in QEventLoop::processEvents (this=0xac5b91d0, flags=) at kernel/qeventloop.cpp:149
#6  0x01754a8a in QEventLoop::exec (this=0xac5b91d0, flags=...) at kernel/qeventloop.cpp:201
#7  0x01650b7e in QThread::exec (this=0x9f80360) at thread/qthread.cpp:490
#8  0x0173335b in QInotifyFileSystemWatcherEngine::run (this=0x9f80360) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x01653df9 in QThreadPrivate::start (arg=0x9f80360) at thread/qthread_unix.cpp:266
#10 0x033f4ba8 in ?? () from /usr/lib/nvidia-current/libGL.so.1

Thread 3 (Thread 0xaa42cb70 (LWP 2218)):
#0  0x0154de36 in clock_gettime (clock_id=22355956, tp=0xaa42bed0) at ../sysdeps/unix/clock_gettime.c:100
#1  0x016af50b in do_gettime () at tools/qelapsedtimer_unix.cpp:105
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#3  0x017866e5 in QTimerInfoList::updateCurrentTime (this=0xaccb62c) at kernel/qeventdispatcher_unix.cpp:339
#4  0x0178672a in QTimerInfoList::timerWait (this=0xaccb62c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x017847a8 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xaa42bffc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x0178483d in timerSourcePrepare (source=0x0, timeout=0x1551ff4) at kernel/qeventdispatcher_glib.cpp:169
#7  0x05f39e6a in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0x05f3a279 in ?? () from /lib/libglib-2.0.so.0
#9  0x05f3a848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0x0178459f in QEventDispatcherGlib::processEvents (this=0x9e9d748, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#11 0x01754609 in QEventLoop::processEvents (this=0xaa42c1d0, flags=) at kernel/qeventloop.cpp:149
#12 0x01754a8a in QEventLoop::exec (this=0xaa42c1d0, flags=...) at kernel/qeventloop.cpp:201
#13 0x01650b7e in QThread::exec (this=0xaccd4b8) at thread/qthread.cpp:490
#14 0x0173335b in QInotifyFileSystemWatcherEngine::run (this=0xaccd4b8) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x01653df9 in QThreadPrivate::start (arg=0xaccd4b8) at thread/qthread_unix.cpp:266
#16 0x033f4ba8 in ?? () from /usr/lib/nvidia-current/libGL.so.1

Thread 2 (Thread 0xa76feb70 (LWP 2913)):
#0  0x003bd416 in __kernel_vsyscall ()
#1  0x0085e4dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x004f5dad in __pthread_cond_wait (cond=0x2a9c770, mutex=0x2a9c758) at forward.c:139
#3  0x025943a5 in ?? () from /usr/lib/libQtWebKit.so.4
#4  0x02594481 in ?? () from /usr/lib/libQtWebKit.so.4
#5  0x033f4ba8 in ?? () from /usr/lib/nvidia-current/libGL.so.1

Thread 1 (Thread 0xb6140a30 (LWP 2051)):
[KCrash Handler]
#7  0x0176e041 in QObject::disconnect (sender=0xc88ed78, signal=0x0, receiver=0x994c9f8, method=0x0) at kernel/qobject.cpp:2730
#8  0x001cd8a1 in disconnect (this=0x994ee90, constraints=...) at /usr/include/qt4/QtCore/qobject.h:229
#9  Plasma::ContainmentPrivate::containmentConstraintsEvent (this=0x994ee90, constraints=...) at ../../plasma/containment.cpp:2296
#10 0x001ae98f in Plasma::Applet::flushPendingConstraintsEvents (this=0x994c9f8) at ../../plasma/applet.cpp:1308
#11 0x001af842 in Plasma::Applet::timerEvent (this=0x994c9f8, event=0xbfc312f0) at ../../plasma/applet.cpp:2505
#12 0x01768504 in QObject::event (this=0x994c9f8, e=0xc88ed78) at kernel/qobject.cpp:1183
#13 0x055ff174 in QGraphicsWidget::event (this=0x994c9f8, event=0xbfc312f0) at graphicsview/qgraphicswidget.cpp:1405
#14 0x04ef5fdc in QApplicationPrivate::notify_helper (this=0x950cd68, receiver=0x994c9f8, e=0xbfc312f0) at kernel/qapplication.cpp:4396
#15 0x04efc04e in QApplication::notify (this=0x9500450, receiver=0x994c9f8, e=0xbfc312f0) at kernel/qapplication.cpp:3798
#16 0x01115cfa in KApplication::notify (this=0x9500450, receiver=0x994c9f8, event=0xbfc312f0) at ../../kdeui/kernel/kapplication.cpp:310
#17 0x01755b3b in QCoreApplication::notifyInternal (this=0x9500450, receiver=0x994c9f8, event=0xbfc312f0) at kernel/qcoreapplication.cpp:732
#18 0x01787ad6 in sendEvent (this=0x950ff34) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QTimerInfoList::activateTimers (this=0x950ff34) at kernel/qeventdispatcher_unix.cpp:602
#20 0x01784874 in timerSourceDispatch (source=0x950ff00) at kernel/qeventdispatcher_glib.cpp:184
#21 0x05f36855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#22 0x05f3a668 in ?? () from /lib/libglib-2.0.so.0
#23 0x05f3a848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#24 0x01784565 in QEventDispatcherGlib::processEvents (this=0x94abce8, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#25 0x04fb7be5 in QGuiEventDispatcherGlib::processEvents (this=0x94abce8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x01754609 in QEventLoop::processEvents (this=0xbfc315b4, flags=) at kernel/qeventloop.cpp:149
#27 0x01754a8a in QEventLoop::exec (this=0xbfc315b4, flags=...) at kernel/qeventloop.cpp:201
#28 0x0175900f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#29 0x04ef4e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#30 0x009d6afe in kdemain (argc=1, argv=0xbfc317c4) at ../../../../plasma/desktop/shell/main.cpp:118
#31 0x080485bb in main (argc=1, argv=0xbfc317c4) at plasma-desktop_dummy.cpp:3

Reported using DrKonqi
Comment 1 Beat Wolf 2010-10-17 17:40:16 UTC
*** Bug 253907 has been marked as a duplicate of this bug. ***
Comment 2 Beat Wolf 2010-10-17 17:40:20 UTC
*** Bug 254241 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2010-12-25 17:23:44 UTC
[Comment from a bug triager]
From bug 261167 (4.6 RC1):
-- Information about the crash:
- What I was doing when the application crashed: I resized a plasmoid
(konsole-plasmoid) on my plasma dashboard, because after every restart it has a
smaller size than I set. After that, plasma crashes. This also happend once
after I moved a plasmoid on the dashboard
The crash can be reproduced some of the time.

- Updated backtrace:
[KCrash Handler]
...
#11 0x00007f286ae487b5 in QObject::disconnect (sender=0x333a000, signal=0x0,
receiver=0x14ad5b0, method=0x0) at kernel/qobject.cpp:2722
#12 0x00007f2861b876a2 in disconnect (this=0x14a7220, constraints=...) at
/usr/include/QtCore/qobject.h:229
#13 Plasma::ContainmentPrivate::containmentConstraintsEvent (this=0x14a7220,
constraints=...) at /usr/src/debug/kdelibs-4.5.90/plasma/containment.cpp:2238
#14 0x00007f2861b74f15 in Plasma::Applet::flushPendingConstraintsEvents
(this=0x14ad5b0) at /usr/src/debug/kdelibs-4.5.90/plasma/applet.cpp:1333
#15 0x00007f2861b75b8d in Plasma::Applet::timerEvent (this=0x14ad5b0,
event=<value optimized out>) at
/usr/src/debug/kdelibs-4.5.90/plasma/applet.cpp:2429
...
Comment 4 Dario Andres 2010-12-25 17:23:49 UTC
*** Bug 261167 has been marked as a duplicate of this bug. ***
Comment 5 David 2010-12-28 18:43:57 UTC
Created attachment 55323 [details]
New crash information added by DrKonqi

plasma-desktop (0.3) on KDE Platform 4.5.4 (KDE 4.5.4) using Qt 4.7.0

- What I was doing when the application crashed:

This happened for me just now when simply moving a widget (the Show/Hide dashboard widget) and then clicking it repeatedly to show and hide the Plasma dashboard (in attempting to position it perfectly to match the same widget I put on my auto-hide panel)

-- Backtrace (Reduced):
#6  deref (this=0x3462f98, __in_chrg=<value optimized out>) at ../../include/QtCore/../../src/corelib/arch/qatomic_x86_64.h:133
#7  cleanup (this=0x3462f98, __in_chrg=<value optimized out>) at painting/qbrush.cpp:255
#8  ~QScopedPointer (this=0x3462f98, __in_chrg=<value optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:100
#9  QBrush::~QBrush (this=0x3462f98, __in_chrg=<value optimized out>) at painting/qbrush.cpp:575
#10 0x00007f22f8d4e4f4 in ~QPalettePrivate (this=<value optimized out>, __in_chrg=<value optimized out>) at kernel/qpalette.cpp:51
Comment 6 Beat Wolf 2011-02-22 10:19:37 UTC
*** Bug 266799 has been marked as a duplicate of this bug. ***
Comment 7 Dario Andres 2011-03-07 21:47:19 UTC
From bug 267750:
-- Information about the crash:
I was moving a notes plasmoid and when I dropped the plasmoid plasma crashed
Comment 8 Dario Andres 2011-03-07 21:47:23 UTC
*** Bug 267750 has been marked as a duplicate of this bug. ***
Comment 9 EP 2011-05-26 19:57:17 UTC
Created attachment 60358 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.6.00 (4.6.0) "release 6" using Qt 4.7.1

- What I was doing when the application crashed:
I resize a LCD weather widget and plasma has crashed

-- Backtrace (Reduced):
#8  0xb6e79223 in QObject::disconnect (sender=0x8a8de60, signal=0x0, receiver=0x8366910, method=0x0) at kernel/qobject.cpp:2722
#9  0xb4c4edaf in disconnect (this=0x84b1b80, constraints=...) at /usr/include/QtCore/qobject.h:229
#10 Plasma::ContainmentPrivate::containmentConstraintsEvent (this=0x84b1b80, constraints=...) at /usr/src/debug/kdelibs-4.6.0/plasma/containment.cpp:2240
#11 0xb4c3a1df in Plasma::Applet::flushPendingConstraintsEvents (this=0x8366910) at /usr/src/debug/kdelibs-4.6.0/plasma/applet.cpp:1333
#12 0xb4c3b002 in Plasma::Applet::timerEvent (this=0x8366910, event=0xbfab34fc) at /usr/src/debug/kdelibs-4.6.0/plasma/applet.cpp:2429
Comment 10 Aaron J. Seigo 2011-05-27 23:27:46 UTC
*** Bug 272714 has been marked as a duplicate of this bug. ***
Comment 11 Aaron J. Seigo 2011-05-28 00:23:42 UTC
Git commit 6a2b0ce2593b01737418b5359c02e61ebac149a7 by Aaron Seigo.
Committed on 28/05/2011 at 00:22.
Pushed by aseigo into branch 'master'.

move applet handle handling (*cough*) to applet instead of contaiment

much cleaner and eliminates the possibility of odd crashes

BUG:253421

M  +74   -0    plasma/applet.cpp     
M  +1    -0    plasma/applet.h     
M  +4    -98   plasma/containment.cpp     
M  +0    -1    plasma/containment.h     
M  +8    -5    plasma/private/applet_p.h     
M  +7    -2    plasma/private/applethandle.cpp     
M  +2    -1    plasma/private/applethandle_p.h     
M  +0    -2    plasma/private/containment_p.h     

http://commits.kde.org/kdelibs/6a2b0ce2593b01737418b5359c02e61ebac149a7
Comment 12 Thijs 2012-01-09 16:59:11 UTC
*** Bug 291067 has been marked as a duplicate of this bug. ***