move applet handle handling (*cough*) to applet instead of contaiment

much cleaner and eliminates the possibility of odd crashes

BUG:253421